fix: remove --system from uv sync

--- a/src/voice_input/Dockerfile
+++ b/src/voice_input/Dockerfile
@@ -3,10 +3,9 @@ FROM ghcr.io/alice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-# We use --system because we want to leverage the pre-installed packages in the base image.
 RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     --mount=type=bind,source=uv.lock,target=uv.lock \
-    uv sync --frozen --no-install-project --system
+    uv sync --frozen --no-install-project
 
 # Copy source code
 COPY src/ ./src/
