--- a/src/speech_rec/Dockerfile
+++ b/src/speech_rec/Dockerfile
@@ -3,12 +3,13 @@ FROM ghcr.io/heyalice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    --mount=type=bind,source=uv.lock,target=uv.lock \
+RUN --mount=type=bind,source=src/speech_rec/pyproject.toml,target=pyproject.toml \
+    --mount=type=bind,source=src/speech_rec/uv.lock,target=uv.lock \
+    --mount=type=bind,source=src/proto_defs,target=/proto_defs \
     uv sync --frozen --no-install-project
 
 # Create src directory
-COPY src/ ./src/
+COPY src/speech_rec/src/ ./src/
 
 # Environment variables
 ENV PYTHONPATH=/app
