--- a/src/speech_rec/pyproject.toml
+++ b/src/speech_rec/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.11"
 dependencies = [
     "faster-whisper==1.0.3",
     "numpy>=2.3.5",
+    "alicepi-proto @ ../proto_defs",
 ]
