fix: build context for final images

--- a/src/orchestrator/Dockerfile
+++ b/src/orchestrator/Dockerfile
@@ -3,10 +3,10 @@ FROM ghcr.io/heyalice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-RUN --mount=type=bind,source=src/orchestrator/pyproject.toml,target=pyproject.toml \
-    --mount=type=bind,source=src/orchestrator/uv.lock,target=uv.lock \
+RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
     uv sync --frozen --no-install-project
 
-COPY src/orchestrator/src/ src/
+COPY src/ ./src/
 
 CMD ["uv", "run", "python", "-u", "src/main.py"]
