--- a/src/voice_input/Dockerfile
+++ b/src/voice_input/Dockerfile
@@ -3,12 +3,12 @@ FROM ghcr.io/heyalice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-RUN --mount=type=bind,source=src/voice_input/pyproject.toml,target=pyproject.toml \
-    --mount=type=bind,source=src/voice_input/uv.lock,target=uv.lock \
+RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
     uv sync --frozen --no-install-project
 
 # Copy source code
-COPY src/voice_input/src/ ./src/
+COPY src/ ./src/
 
 # Set entrypoint
 CMD ["uv", "run", "python", "-m", "src.main"]
