--- a/src/orchestrator/pyproject.toml
+++ b/src/orchestrator/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "alicepi-proto",
     "pyzmq==25.1.1",
     "requests==2.31.0",
-    "alicepi-proto @ ../proto_defs",
 ]
+
+[tool.uv.sources]
+alicepi-proto = { path = "../proto_defs" }
