feat(voice_input): Implement audio capture, VAD, and streaming functionality
- Added AudioCapture class for live and mock audio input handling.
- Introduced VADWrapper class using Silero VAD for speech detection.
- Created AudioStreamer class for sending audio packets over TCP.
- Updated main application logic to manage audio capture, VAD processing, and streaming.
- Configured audio parameters in config.py.
- Enhanced Dockerfile and pyproject.toml for dependency management and project structure.
- Added necessary scripts and modules for voice input processing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - SESSION_LOG_PATH=/app/logs/sessions.jsonl
     volumes:
       - ./logs:/app/logs
+    ports:
+      - "6000:6000" # Orchestrator Control Port
     depends_on:
       - voice-output
       - speech-rec
@@ -37,6 +39,13 @@ services:
       - SPEECH_REC_HOST=speech-rec
     devices:
       - "/dev/snd:/dev/snd"
+  network-voice-input:
+    build: ./src/network_voice_input
+    container_name: alice-voice-input
+    environment:
+      - SPEECH_REC_HOST=speech-rec
+    ports:
+      - "5558:5558" # voice input
 
   voice-output:
     build: ./src/voice_output
