--- a/src/speech_rec/Dockerfile
+++ b/src/speech_rec/Dockerfile
@@ -3,9 +3,10 @@ FROM ghcr.io/heyalice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     --mount=type=bind,source=uv.lock,target=uv.lock \
-    uv sync --frozen --no-install-project
+    uv sync --frozen
 
 # Create src directory
 COPY src/ ./src/
@@ -13,4 +14,4 @@ COPY src/ ./src/
 # Environment variables
 ENV PYTHONPATH=/app
 
-CMD ["uv", "run", "python", "-u", "src/main.py"]
+CMD ["uv", "run", "python", "-u", "-m", "src.speech_rec.main"]
