--- a/src/voice_input/Dockerfile
+++ b/src/voice_input/Dockerfile
@@ -3,12 +3,13 @@ FROM ghcr.io/heyalice-ai/alicepi-base
 WORKDIR /app
 
 # Install dependencies using uv
-RUN --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     uv sync --frozen --no-install-project
 
 # Copy source code
-COPY src/ ./src/
+COPY . .
 
 # Set entrypoint
-CMD ["uv", "run", "python", "-m", "src.main"]
+CMD ["uv", "run", "python", "-m", "src.voice_input.main"]
