refactor(speech-rec): configuration and streaming logic
- Updated configuration variables in `config.py` to use SPEECH_REC_HOST and SPEECH_REC_AUDIO_PORT for better clarity.
- Modified `README.md` to reflect changes in configuration parameters.
- Enhanced logging in `main.py` to include connection details for speech recognition.
- Refactored `streamer.py` to establish a connection to the speech recognition service instead of accepting client connections.
- Implemented a connection loop in `streamer.py` to handle reconnections and maintain a single socket connection to the speech recognition service.
- Updated packet sending logic to handle disconnections gracefully.

--- a/src/speech_rec/pyproject.toml
+++ b/src/speech_rec/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alicepi-proto",
     "faster-whisper==1.0.3",
     "numpy>=2.3.5",
+    "requests>=2.32.5",
 ]
 
 [tool.uv.sources]
