feat(speech-rec): enable build-time prefetching of Whisper models via environment variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,10 @@ services:
       - "/dev/snd:/dev/snd"
 
   speech-rec:
-    build: ./src/speech_rec
+    build:
+      context: ./src/speech_rec
+      args:
+        SR_WHISPER_MODEL: "tiny.en,base.en,turbo.en" # Prefetch multiple models
     image: ghcr.io/heyalice-ai/alicepi-speech-rec
     container_name: alice-speech-rec
     ports:
