--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     build:
       context: ./src/speech_rec
       args:
-        SR_WHISPER_MODEL: "tiny.en,base.en,turbo.en" # Prefetch multiple models
+        SR_WHISPER_MODEL: "tiny.en,base.en,distil-medium.en" # Prefetch multiple models
     image: ghcr.io/heyalice-ai/alicepi-speech-rec
     container_name: alice-speech-rec
     ports:
