--- a/src/orchestrator/pyproject.toml
+++ b/src/orchestrator/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alicepi-proto",
     "pyzmq==25.1.1",
     "requests==2.31.0",
+    "websockets==12.0",
 ]
 
 [tool.uv.sources]
