--- a/src/orchestrator/pyproject.toml
+++ b/src/orchestrator/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "pyzmq==25.1.1",
     "requests==2.31.0",
     "websockets==12.0",
+    "pydub==0.25.1",
+    "numpy",
 ]
 
 [tool.uv.sources]
