--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -5,4 +5,16 @@
 rustflags = ["-C", "target-feature=+crt-static"]
 
 [target.aarch64-unknown-linux-musl]
-rustflags = ["-C", "target-feature=+crt-static"]
+linker = "aarch64-linux-gnu-gcc"
+rustflags = [
+  "-C", "target-feature=+crt-static",
+]
+
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
+
+[target.aarch64-unknown-linux-gnu.env]
+BINDGEN_EXTRA_CLANG_ARGS = "--target=aarch64-unknown-linux-gnu --sysroot=/usr/aarch64-linux-gnu/sys-root -I/usr/aarch64-linux-gnu/sys-root/usr/include"
+CC = "aarch64-linux-gnu-gcc"
+CXX = "aarch64-linux-gnu-g++"
+AR = "aarch64-linux-gnu-ar"
