--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [profile.release]
-debug = true
-strip = false
+# debug = true
+# strip = false
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
@@ -24,6 +24,13 @@ ndarray = "0.17.2"
 ort = "2.0.0-rc.11"
 rodio = "0.19.0"
 whisper-rs = "0.15.1"
+async-trait = "0.1.82"
+futures-util = "0.3.30"
+regex = "1.10.6"
+reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
+tokio-tungstenite = "0.23.1"
+url = "2.5.2"
+uuid = { version = "1.10.0", features = ["v4"] }
 
 rppal = { version = "0.19.0", optional = true }
 
