--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ rodio = "0.19.0"
 whisper-rs = "0.15.1"
 async-trait = "0.1.82"
 futures-util = "0.3.30"
+bytes = "1.7.1"
 regex = "1.10.6"
-reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "stream", "zstd"] }
 tokio-tungstenite = "0.23.1"
 url = "2.5.2"
 uuid = { version = "1.10.0", features = ["v4"] }
