--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
 dotenvy = "0.15.7"
 
 bytemuck = "1.17.0"
-cpal = "0.15.3"
+cpal = "^0.16"
 hound = "3.5.1"
 ndarray = "0.17.2"
 ort = "2.0.0-rc.11"
-rodio = "0.19.0"
+rodio = "0.21.1"
 whisper-rs = "0.15.1"
 async-trait = "0.1.82"
 futures-util = "0.3.30"
