--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,9 @@ rppal = { version = "0.19.0", optional = true }
 ureq = { version = "3.1.4", optional = true }
 
 [features]
-default = []
+default = [
+    # "gpio",
+]
 download-models-on-build = ["dep:ureq"]
 gpio = ["dep:rppal"]
 lid_control = []
