--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ ureq = { version = "3.1.4", optional = true }
 
 [features]
 default = [
-    # "gpio",
+    "gpio",
 ]
 download-models-on-build = ["dep:ureq"]
 gpio = ["dep:rppal"]
