--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tokio-tungstenite = "0.23.1"
 url = "2.5.2"
 uuid = { version = "1.10.0", features = ["v4"] }
 indicatif = "0.17.8"
+sherpa-rs-sys = { version = "0.6.8", optional = true }
 
 rppal = { version = "0.19.0", optional = true }
 
@@ -49,3 +50,4 @@ download-models-on-build = ["dep:ureq"]
 gpio = ["dep:rppal"]
 lid_control = []
 hailo = []
+sherpa = ["dep:sherpa-rs-sys"]
