--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ url = "2.5.2"
 uuid = { version = "1.10.0", features = ["v4"] }
 indicatif = "0.17.8"
 sherpa-rs-sys = { version = "0.6.8", optional = true }
+bzip2 = "0.5.1"
+tar = "0.4.41"
 
 rppal = { version = "0.19.0", optional = true }
 
