--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ ureq = { version = "3.1.4", optional = true }
 [features]
 default = [
     "gpio",
+    "sherpa",
 ]
 download-models-on-build = ["dep:ureq"]
 gpio = ["dep:rppal"]
