--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ indicatif = "0.17.8"
 sherpa-rs-sys = { version = "0.6.8", optional = true }
 bzip2 = "0.5.1"
 tar = "0.4.41"
+tokenizers = "0.20.1"
 
 rppal = { version = "0.19.0", optional = true }
 
