--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ ureq = { version = "3.1.4", optional = true }
 [features]
 default = [
     "gpio",
-    "sherpa",
+    # "sherpa",
 ]
 download-models-on-build = ["dep:ureq"]
 gpio = ["dep:rppal"]
