--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ matrix.target }}
-      - name: Install system deps (x86_64)
-        if: matrix.target == 'x86_64-unknown-linux-gnu'
+      - name: Install system deps
         run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libssl-dev
       - name: Install cross (aarch64)
         if: matrix.target == 'aarch64-unknown-linux-gnu'
