--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,11 @@ jobs:
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         env:
           CROSS_CONTAINER_ENGINE: docker
+          PKG_CONFIG_ALLOW_CROSS: "1"
+          PKG_CONFIG_PATH: /usr/lib/aarch64-linux-gnu/pkgconfig
+          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_DIR: /usr
+          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_INCLUDE_DIR: /usr/include/aarch64-linux-gnu
+          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_LIB_DIR: /usr/lib/aarch64-linux-gnu
         run: cross build --release --locked --target ${{ matrix.target }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
