--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,14 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: ${{ matrix.target }}
+      - name: Cache cross home
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/cross
+          key: ${{ runner.os }}-cross-${{ matrix.target }}-${{ hashFiles('Cross.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-cross-${{ matrix.target }}-
       - name: Install system deps
         run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libssl-dev
       - name: Install cross (aarch64)
