--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
       - name: Install system deps
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libssl-dev
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config
       - name: Run tests
         run: cargo test --locked
 
@@ -47,7 +47,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cross-${{ matrix.target }}-
       - name: Install system deps
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libssl-dev
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config
       - name: Install cross (aarch64)
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: cargo install cross --git https://github.com/cross-rs/cross
@@ -59,10 +59,6 @@ jobs:
         env:
           CROSS_CONTAINER_ENGINE: docker
           PKG_CONFIG_ALLOW_CROSS: "1"
-          PKG_CONFIG_PATH: /usr/lib/aarch64-linux-gnu/pkgconfig
-          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_DIR: /usr
-          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_INCLUDE_DIR: /usr/include/aarch64-linux-gnu
-          AARCH64_UNKNOWN_LINUX_GNU_OPENSSL_LIB_DIR: /usr/lib/aarch64-linux-gnu
         run: cross build --release --locked --target ${{ matrix.target }}
       - name: Upload artifact
         uses: actions/upload-artifact@v4
