--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ build = "build.rs"
 # strip = false
 
 [dependencies]
-clap = { version = "4.5.20", features = ["derive"] }
+clap = { version = "4.5.55", features = ["derive"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-thiserror = "1.0.64"
+thiserror = "2.0.18"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = "0.7.12"
 tracing = "0.1.40"
@@ -23,24 +23,24 @@ bytemuck = "1.17.0"
 cpal = "^0.16"
 hound = "3.5.1"
 ndarray = "0.17.2"
-ort = "2.0.0-rc.11"
+ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-rustls", "copy-dylibs"] }
 rodio = "0.21.1"
 whisper-rs = "0.15.1"
 async-trait = "0.1.82"
 futures-util = "0.3.30"
 bytes = "1.7.1"
 regex = "1.10.6"
-reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "stream", "zstd"] }
-tokio-tungstenite = "0.23.1"
+reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream", "zstd"] }
+tokio-tungstenite = "0.28.0"
 url = "2.5.2"
-uuid = { version = "1.10.0", features = ["v4"] }
-indicatif = "0.17.8"
+uuid = { version = "1.20.0", features = ["v4"] }
+indicatif = "^0.18"
 sherpa-rs-sys = { version = "0.6.8", optional = true }
-bzip2 = "0.5.1"
+bzip2 = "0.6.1"
 tar = "0.4.41"
-tokenizers = "0.20.1"
+tokenizers = "0.22.2"
 
-rppal = { version = "0.19.0", optional = true }
+rppal = { version = "0.22.1", optional = true }
 
 [build-dependencies]
 ureq = { version = "3.1.4", optional = true }
