--- a/Cross.toml
+++ b/Cross.toml
@@ -2,5 +2,5 @@
 pre-build = [
     "dpkg --add-architecture arm64",
     "apt-get update",
-    "apt-get install -y pkg-config",
+    "apt-get install -y pkg-config libasound2-dev:arm64",
 ]
