--- a/Cross.toml
+++ b/Cross.toml
@@ -1,3 +1,9 @@
+[build.env]
+passthrough = [
+    "XDG_CACHE_HOME",
+    "HOME",
+]
+
 [target.aarch64-unknown-linux-gnu]
 pre-build = [
     "dpkg --add-architecture arm64",
