--- a/Cross.toml
+++ b/Cross.toml
@@ -5,6 +5,7 @@ passthrough = [
 ]
 
 [target.aarch64-unknown-linux-gnu]
+image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"
 pre-build = [
     "dpkg --add-architecture arm64",
     "apt-get update",
