fix: add own Dockerfile for cross

--- a/Cross.toml
+++ b/Cross.toml
@@ -5,9 +5,4 @@ passthrough = [
 ]
 
 [target.aarch64-unknown-linux-gnu]
-image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"
-pre-build = [
-    "dpkg --add-architecture arm64",
-    "apt-get update",
-    "apt-get install -y pkg-config libasound2-dev:arm64",
-]
+dockerfile = "Dockerfile.aarch64"
